# atomic_deep_seek

./: .cursor.json  .gitignore  API.md  ARCHITECTURE.md  BACKEND_STARTUP_RESULTS.md  CLAUDE.md  CLAUDE_CODE_RECREATION_CHECKLIST.md  CONFIGURATION_GUIDE.md  DEPENDENCY_GUIDE.md  DEPLOYMENT.md  DEVELOPMENT.md  FILES_CREATED_TODAY.md  FILE_STRUCTURE_GUIDE.md  FINAL_TEST_REPORT.md  HOW_TO_RUN.md  IMPLEMENTATION_GUIDE.md  Makefile  README.md  SETUP_README.md  TESTING_GUIDE.md  TESTING_IMPLEMENTATION_GUIDE.md  TEST_MATH_TABLES.md  TEST_RESULTS.md  TEST_STRATEGY.md  UI_LAYOUT_FIX_PLAN.md  backend_base_classes_chart.md  config.env  config.sh  debug_message.py  dual_filtering_implementation_plan.md  frontend-manager.sh  plan_source_check.md  plan_source_check_revised.md  refactor_agents.md  requirements.txt  revised_text_display_fix_plan.md  setup-dev.sh  start-frontend.sh  test_enhanced_filtering.py  test_filtering_logic.py  (+5 more)
backend/: Claude.md  Migrate_to_New_Google_GenAI_SDK.md  README.md  demo_profiling.py  pyproject.toml  remove_old_files_agents.md  requirements.txt  run_server.py  test_genai.py
backend/examples/: cli_research.py
backend/tests/: README.md  conftest.py  test_api_simple.py  test_atomic_agent_implementation.py  test_comprehensive_agents.py  test_comprehensive_api.py  test_comprehensive_orchestrator.py  test_e2e_integration.py  test_functional.py  test_integration.py  test_langchain_implementation.py  test_migration_comparison.py  test_migration_simple.py  test_performance_profiling.py  test_search_quality.py  test_simple_functional.py  (+1 more)
docs/: SETUP_GUIDE.md
(+82 files in other folders)
